# swes

./: Cargo.toml  LICENSE  Makefile.toml
files/: style.css
src/: blog_storage.rs  file_server.rs  handlebars_support.rs  main.rs
static/: hot_reload.js
tests/: _implementing_foo.md  implementing_foo.md  simple.md  test.md
themes/default/: blog_entry.handlebars  entry_not_found.handlebars  home.handlebars
