[package]
name = "swes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
crossbeam = "0.8.2"
env_logger = "0.10.1"
log = "0.4.20"
comrak = "0.20.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
yaml-front-matter = "0.1.0"
warp = "0.3.6"
notify = "6.1.1"
mime_guess = "2.0.4"
path-clean = "1.0.1"
handlebars = "5.0.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures-util = "0.3.30"
